--- a/index.html
+++ b/index.html
@@ -12,10 +12,282 @@
     <title>Credence Analytics | [Internship]</title>
     <meta name="description" content="" />
     <link rel="stylesheet" href="index.css" />
-
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
     <script defer src="index.js"></script>
   </head>
   <body class="darkTheme">
-    
+    <header>
+      <div class="container">
+        <div class="flex-header">
+          <div class="content">
+            <h1>Social Media Dashboard</h1>
+            <p class="total-count">Total Followers: 23,004</p>
+          </div>
+          <hr />
+
+          <div class="switch">
+            <p>Dark Mode</p>
+            <div class="switch-btn" id="mode">
+              <div class="circle-btn"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="overall">
+        <div class="container">
+          <div class="overall-cards">
+            <div class="overall-card">
+              <div class="bar bar-facebook"></div>
+              <div class="profile">
+                <div class="icon">
+                  <img src="./icon-facebook.svg" />
+                </div>
+                <p>@nathanf</p>
+              </div>
+
+              <p class="overall-number">1987</p>
+              <p class="overall-unit text-regular">Followers</p>
+
+              <div class="overall-today">
+                <div class="icon">
+                  <img src="./icon-up.svg" />
+                </div>
+                <p>12 Today</p>
+              </div>
+            </div>
+
+            <div class="overall-card">
+              <div class="bar bar-twitter"></div>
+              <div class="profile">
+                <div class="icon">
+                  <img src="./icon-twitter.svg" />
+                </div>
+                <p>@nathanf</p>
+              </div>
+
+              <p class="overall-number">1044</p>
+              <p class="overall-unit text-regular">Followers</p>
+
+              <div class="overall-today">
+                <div class="icon">
+                  <img src="./icon-up.svg" />
+                </div>
+                <p>99 Today</p>
+              </div>
+            </div>
+
+            <div class="overall-card">
+              <div class="bar bar-instagram"></div>
+              <div class="profile">
+                <div class="icon">
+                  <img src="./icon-instagram.svg" />
+                </div>
+                <p>@realnathanf</p>
+              </div>
+
+              <p class="overall-number">11k</p>
+              <p class="overall-unit text-regular">Followers</p>
+
+              <div class="overall-today">
+                <div class="icon">
+                  <img src="./icon-up.svg" />
+                </div>
+                <p>1099 Today</p>
+              </div>
+            </div>
+
+            <div class="overall-card">
+              <div class="bar bar-youtube"></div>
+              <div class="profile">
+                <div class="icon">
+                  <img src="./icon-youtube.svg" />
+                </div>
+                <p>@Nathan F.</p>
+              </div>
+
+              <p class="overall-number">8239</p>
+              <p class="overall-unit text-regular">SUBSCRIBERS</p>
+
+              <div class="overall-today">
+                <div class="icon">
+                  <img src="./icon-down.svg" />
+                </div>
+                <p class="overall-down">144 Today</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="overview">
+        <div class="container">
+          <h3>Overview - Today</h3>
+          <div class="overview-cards">
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Page Views</p>
+                <div class="icon">
+                  <img src="./icon-facebook.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>87</p>
+                <div class="overview-up">
+                  <div class="icon">
+                    <img src="./icon-up.svg" />
+                  </div>
+                  <p>3%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Likes</p>
+                <div class="icon">
+                  <img src="./icon-facebook.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>52</p>
+                <div class="overview-down">
+                  <div class="icon">
+                    <img src="./icon-down.svg" />
+                  </div>
+                  <p>2%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Likes</p>
+                <div class="icon">
+                  <img src="./icon-instagram.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>5462</p>
+                <div class="overview-up">
+                  <div class="icon">
+                    <img src="./icon-up.svg" />
+                  </div>
+                  <p>2257%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Profile Views</p>
+                <div class="icon">
+                  <img src="./icon-instagram.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>52k</p>
+                <div class="overview-up">
+                  <div class="icon">
+                    <img src="./icon-up.svg" />
+                  </div>
+                  <p>1375%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Retweets</p>
+                <div class="icon">
+                  <img src="./icon-twitter.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>117</p>
+                <div class="overview-up">
+                  <div class="icon">
+                    <img src="./icon-up.svg" />
+                  </div>
+                  <p>303%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Likes</p>
+                <div class="icon">
+                  <img src="./icon-twitter.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>507</p>
+                <div class="overview-up">
+                  <div class="icon">
+                    <img src="./icon-up.svg" />
+                  </div>
+                  <p>553%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Likes</p>
+                <div class="icon">
+                  <img src="./icon-youtube.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>107</p>
+                <div class="overview-down">
+                  <div class="icon">
+                    <img src="./icon-down.svg" />
+                  </div>
+                  <p>19%</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="overview-card">
+              <div class="overview-title">
+                <p>Total Views</p>
+                <div class="icon">
+                  <img src="./icon-youtube.svg" />
+                </div>
+              </div>
+
+              <div class="overview-stats">
+                <p>1407</p>
+                <div class="overview-down">
+                  <div class="icon">
+                    <img src="./icon-down.svg" />
+                  </div>
+                  <p>12%</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
